--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-axios": "^0.17.1",
     "react-native-youtube": "^1.0.1",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
